v.1.0.0-pre.43
   - Added Mixin project template support.
   - Project icons now consistent across the application.
   - Last used project location now remembered per template type.

v.1.0.0-pre.42
   - Package update checks now respond to refresh command.
   - Improved visual spacing consistency between action items.

v.1.0.0-pre.41
   - Interactive notifications pause timeout when hovering to allow reading and clicking actions.

v.1.0.0-pre.40
   - Project thumbnails now displayed in project list (thumb.png or thumb.jpg in project directory).
   - Redesigned notification snackbars with horizontal layout for improved compactness.
   - Added configurable deployment notification timeout in Global Settings > Advanced.
   - Quick confirmation messages now display as toast-style notifications without close button.
   - Removed "Show me" button from deployment notifications.
   - Updated Hub application icon.

v.1.0.0-pre.39
   - Fixed Hub ignoring global custom auto output paths when resolving script/mod locations.
   - Copy to clipboard, Show me, and deployment status now respect custom auto paths.
   - Fixed excessive top margin above action items in project actions panel.

v.1.0.0-pre.38
   - Fixed "Open in Hub" button in snackbar notifications not restoring the window.

v.1.0.0-pre.37
   - Unified validation message styling across all dialogs.
   - Fixed validation error borders persisting in focus and hover states.
   - Fixed app not starting minimized when launched with build notifications.
   - Fix template updates for pull requests

v.1.0.0-pre.35
   - Update "Clear" button on Textboxes

v.1.0.0-pre.34
   - Fixed a crash when opening the About view

v.1.0.0-pre.33
   - Added unified PathInput control for consistent path editing across settings.
   - Added UI testing infrastructure and expanded unit test coverage.
   - Improved test infrastructure with comprehensive filesystem abstraction.
   - Attempt to fix path resolution on Linux

v.1.0.0-pre.32