@@ -1,0 +1,19 @@
+using Avalonia.Controls;
+using Mal.SourceGeneratedDI;
+
+namespace Mdk.Hub.Features.Projects.MacroEditor;
+
+/// <summary>
+/// View for the macro editor dialog.
+/// </summary>
+[Instance]
+public partial class MacroEditorDialogView : UserControl
+{
+    /// <summary>
+    /// Initializes a new instance of the MacroEditorDialogView class.
+    /// </summary>
+    public MacroEditorDialogView()
+    {
+        InitializeComponent();
+    }
+}
