@@ -2,6 +2,8 @@ v.1.0.0-pre.43
    - Added Mixin project template support.
    - Project icons now consistent across the application.
    - Last used project location now remembered per template type.
+   - Added macro editor for custom text replacement in projects.
+   - Macros can be configured separately for shared (Main) and local (developer-specific) settings.
 
 v.1.0.0-pre.42
    - Package update checks now respond to refresh command.
